src/main/java/org/minirule/MiniRuleParser.java
// Generated from MiniRule.g4 by ANTLR 4.8
package org.minirule;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, True=29, False=30, ID=31, Str=32, 
		Int=33, Float=34, WS=35, ESC=36;
	public static final int
		RULE_actionblock = 0, RULE_block = 1, RULE_action = 2, RULE_fcall = 3, 
		RULE_ifcmp = 4, RULE_mathcal = 5, RULE_param = 6, RULE_variable = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"actionblock", "block", "action", "fcall", "ifcmp", "mathcal", "param", 
			"variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'else'", "'}'", "'return'", "':'", "','", "'|'", "'Tran'", 
			"'('", "')'", "'as'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'!'", 
			"'&&'", "'||'", "'^'", "'*'", "'/'", "'+'", "'-'", "'.'", "'['", "']'", 
			"'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "True", "False", "ID", "Str", "Int", "Float", 
			"WS", "ESC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ActionblockContext extends ParserRuleContext {
		public ActionblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionblock; }
	 
		public ActionblockContext() { }
		public void copyFrom(ActionblockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ActConditionContext extends ActionblockContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ActConditionContext(ActionblockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitActCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionblockContext actionblock() throws RecognitionException {
		ActionblockContext _localctx = new ActionblockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_actionblock);
		try {
			_localctx = new ActConditionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			action();
			setState(17);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockActionContext extends BlockContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockActionContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitBlockAction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockReturnContext extends BlockContext {
		public List<TerminalNode> Str() { return getTokens(MiniRuleParser.Str); }
		public TerminalNode Str(int i) {
			return getToken(MiniRuleParser.Str, i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public BlockReturnContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitBlockReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockIfcmpContext extends BlockContext {
		public List<IfcmpContext> ifcmp() {
			return getRuleContexts(IfcmpContext.class);
		}
		public IfcmpContext ifcmp(int i) {
			return getRuleContext(IfcmpContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public BlockIfcmpContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitBlockIfcmp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new BlockIfcmpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(19);
				match(T__0);
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(20);
					ifcmp(0);
					setState(21);
					block();
					}
					}
					setState(25); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__17) | (1L << True) | (1L << False) | (1L << ID) | (1L << Str) | (1L << Int) | (1L << Float))) != 0) );
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(27);
					match(T__1);
					setState(28);
					block();
					}
				}

				setState(31);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new BlockActionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				match(T__0);
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7 || _la==ID) {
					{
					setState(34);
					action();
					setState(35);
					block();
					}
				}

				setState(39);
				match(T__2);
				}
				break;
			case 3:
				_localctx = new BlockReturnContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				match(T__0);
				setState(41);
				match(T__3);
				setState(42);
				match(T__0);
				{
				setState(43);
				match(Str);
				setState(44);
				match(T__4);
				setState(45);
				param();
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(47);
					match(T__5);
					setState(48);
					match(Str);
					setState(49);
					match(T__4);
					setState(50);
					param();
					}
					}
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(56);
				match(T__2);
				setState(57);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	 
		public ActionContext() { }
		public void copyFrom(ActionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FcallSerialContext extends ActionContext {
		public List<FcallContext> fcall() {
			return getRuleContexts(FcallContext.class);
		}
		public FcallContext fcall(int i) {
			return getRuleContext(FcallContext.class,i);
		}
		public FcallSerialContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitFcallSerial(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TranSerialContext extends ActionContext {
		public List<FcallContext> fcall() {
			return getRuleContexts(FcallContext.class);
		}
		public FcallContext fcall(int i) {
			return getRuleContext(FcallContext.class,i);
		}
		public TranSerialContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitTranSerial(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TranParallelContext extends ActionContext {
		public List<FcallContext> fcall() {
			return getRuleContexts(FcallContext.class);
		}
		public FcallContext fcall(int i) {
			return getRuleContext(FcallContext.class,i);
		}
		public TranParallelContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitTranParallel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FcallParallelContext extends ActionContext {
		public List<FcallContext> fcall() {
			return getRuleContexts(FcallContext.class);
		}
		public FcallContext fcall(int i) {
			return getRuleContext(FcallContext.class,i);
		}
		public FcallParallelContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitFcallParallel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_action);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new FcallSerialContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				fcall();
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(62);
					match(T__5);
					setState(63);
					fcall();
					}
				}

				}
				break;
			case 2:
				_localctx = new FcallParallelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				fcall();
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(67);
					match(T__6);
					setState(68);
					fcall();
					}
				}

				}
				break;
			case 3:
				_localctx = new TranSerialContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				match(T__7);
				setState(72);
				match(T__4);
				setState(73);
				fcall();
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(74);
					match(T__5);
					setState(75);
					fcall();
					}
					}
					setState(78); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__5 );
				}
				break;
			case 4:
				_localctx = new TranParallelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				match(T__7);
				setState(81);
				match(T__4);
				setState(82);
				fcall();
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(83);
					match(T__6);
					setState(84);
					fcall();
					}
					}
					setState(87); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__6 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FcallContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MiniRuleParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MiniRuleParser.ID, i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public FcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fcall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitFcall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FcallContext fcall() throws RecognitionException {
		FcallContext _localctx = new FcallContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fcall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(ID);
			setState(92);
			match(T__8);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << True) | (1L << False) | (1L << ID) | (1L << Str) | (1L << Int) | (1L << Float))) != 0)) {
				{
				setState(93);
				param();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(94);
					match(T__5);
					setState(95);
					param();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(103);
			match(T__9);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(104);
				match(T__10);
				setState(105);
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfcmpContext extends ParserRuleContext {
		public IfcmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifcmp; }
	 
		public IfcmpContext() { }
		public void copyFrom(IfcmpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfcmpNotContext extends IfcmpContext {
		public IfcmpContext ifcmp() {
			return getRuleContext(IfcmpContext.class,0);
		}
		public IfcmpNotContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpTrueContext extends IfcmpContext {
		public TerminalNode True() { return getToken(MiniRuleParser.True, 0); }
		public IfcmpTrueContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpTrue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpAndContext extends IfcmpContext {
		public List<IfcmpContext> ifcmp() {
			return getRuleContexts(IfcmpContext.class);
		}
		public IfcmpContext ifcmp(int i) {
			return getRuleContext(IfcmpContext.class,i);
		}
		public IfcmpAndContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpAgainContext extends IfcmpContext {
		public IfcmpContext ifcmp() {
			return getRuleContext(IfcmpContext.class,0);
		}
		public IfcmpAgainContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpAgain(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpOpContext extends IfcmpContext {
		public Token op;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public IfcmpOpContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpFalseContext extends IfcmpContext {
		public TerminalNode False() { return getToken(MiniRuleParser.False, 0); }
		public IfcmpFalseContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpFalse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfcmpOrContext extends IfcmpContext {
		public List<IfcmpContext> ifcmp() {
			return getRuleContexts(IfcmpContext.class);
		}
		public IfcmpContext ifcmp(int i) {
			return getRuleContext(IfcmpContext.class,i);
		}
		public IfcmpOrContext(IfcmpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitIfcmpOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfcmpContext ifcmp() throws RecognitionException {
		return ifcmp(0);
	}

	private IfcmpContext ifcmp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		IfcmpContext _localctx = new IfcmpContext(_ctx, _parentState);
		IfcmpContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_ifcmp, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				_localctx = new IfcmpTrueContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(109);
				match(True);
				}
				break;
			case 2:
				{
				_localctx = new IfcmpFalseContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(110);
				match(False);
				}
				break;
			case 3:
				{
				_localctx = new IfcmpOpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(111);
				param();
				setState(112);
				((IfcmpOpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) ) {
					((IfcmpOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(113);
				param();
				}
				break;
			case 4:
				{
				_localctx = new IfcmpAgainContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(115);
				match(T__8);
				setState(116);
				ifcmp(0);
				setState(117);
				match(T__9);
				}
				break;
			case 5:
				{
				_localctx = new IfcmpNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(119);
				match(T__17);
				setState(120);
				ifcmp(3);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(129);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						_localctx = new IfcmpAndContext(new IfcmpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_ifcmp);
						setState(123);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(124);
						match(T__18);
						setState(125);
						ifcmp(3);
						}
						break;
					case 2:
						{
						_localctx = new IfcmpOrContext(new IfcmpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_ifcmp);
						setState(126);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(127);
						match(T__19);
						setState(128);
						ifcmp(2);
						}
						break;
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MathcalContext extends ParserRuleContext {
		public MathcalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathcal; }
	 
		public MathcalContext() { }
		public void copyFrom(MathcalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MathcalVariableContext extends MathcalContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public MathcalVariableContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalMulDivContext extends MathcalContext {
		public Token op;
		public List<MathcalContext> mathcal() {
			return getRuleContexts(MathcalContext.class);
		}
		public MathcalContext mathcal(int i) {
			return getRuleContext(MathcalContext.class,i);
		}
		public MathcalMulDivContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalAddDecContext extends MathcalContext {
		public Token op;
		public List<MathcalContext> mathcal() {
			return getRuleContexts(MathcalContext.class);
		}
		public MathcalContext mathcal(int i) {
			return getRuleContext(MathcalContext.class,i);
		}
		public MathcalAddDecContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalAddDec(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalIntContext extends MathcalContext {
		public TerminalNode Int() { return getToken(MiniRuleParser.Int, 0); }
		public MathcalIntContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalAgainContext extends MathcalContext {
		public MathcalContext mathcal() {
			return getRuleContext(MathcalContext.class,0);
		}
		public MathcalAgainContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalAgain(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalMMContext extends MathcalContext {
		public List<MathcalContext> mathcal() {
			return getRuleContexts(MathcalContext.class);
		}
		public MathcalContext mathcal(int i) {
			return getRuleContext(MathcalContext.class,i);
		}
		public MathcalMMContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalMM(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathcalFloatContext extends MathcalContext {
		public TerminalNode Float() { return getToken(MiniRuleParser.Float, 0); }
		public MathcalFloatContext(MathcalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniRuleVisitor ) return ((MiniRuleVisitor<? extends T>)visitor).visitMathcalFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathcalContext mathcal() throws RecognitionException {
		return mathcal(0);
	}

	private MathcalContext mathcal(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MathcalContext _localctx = new MathcalContext(_ctx, _parentState);
		MathcalContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_mathcal, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
				{
				_localctx = new MathcalIntContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
